Fix footer jumping

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -4,4 +4,5 @@
   max-width: $app-max-width;
   margin: 0 auto;
   padding-top: $header-height;
+  min-height: 100vh;
 }
